--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ show_timeline_card: true
 timeline_title: Education & Experience
 # cv_download_link: The link where you host your cv.
 # > e.g. you share your cv on your dropbox, then add the dropbox link here
-cv_download_link: https://example.com/
+# cv_download_link: https://example.com/
 
 # PROJECTS SECTION
 # show_projects_card:
@@ -109,8 +109,8 @@ projects:
 # GOOGLE-ANALYTICS
 # Set the id, if you want to track your website with Google Analytics
 # > set this to "", if you do not want to track with Google Analytics
-google-analytics:
-  id: "UA-158757509-2"
+# google-analytics:
+#   id: "UA-158757509-2"
 
 ### END OF VALUES YOU SHOULD CHANGE ###
 
